<?xml version="1.0"?>
<package>
  <name>wrm_image_publisher</name>
  <version>1.0.0</version>
  <description>The wrm_image_publisher package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="makoto.yabuta@tier4.jp">makotoyabuta</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
